testdata/baselines/reference/submodule/conformance/constructorFunctionMethodTypeParameters.errors.txt
constructorFunctionMethodTypeParameters.js(1,1): error TS8004: Type parameter declarations can only be used in TypeScript files.
constructorFunctionMethodTypeParameters.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
constructorFunctionMethodTypeParameters.js(19,30): error TS8004: Type parameter declarations can only be used in TypeScript files.
constructorFunctionMethodTypeParameters.js(22,16): error TS2304: Cannot find name 'T'.
constructorFunctionMethodTypeParameters.js(22,16): error TS8010: Type annotations can only be used in TypeScript files.
constructorFunctionMethodTypeParameters.js(23,16): error TS8010: Type annotations can only be used in TypeScript files.
constructorFunctionMethodTypeParameters.js(24,17): error TS2304: Cannot find name 'T'.
constructorFunctionMethodTypeParameters.js(24,17): error TS8010: Type annotations can only be used in TypeScript files.


==== constructorFunctionMethodTypeParameters.js (8 errors) ====
    /**
    ~~~
     * @template {string} T
    ~~~~~~~~~~~~~~~~~~~~~~~
     * @param {T} t
    ~~~~~~~~~~~~~~~
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    ~~~
    function Cls(t) {
    ~~~~~~~~~~~~~~~~~
        this.t = t;
    ~~~~~~~~~~~~~~~
    }
    ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    /**
     * @template {string} V
     * @param {T} t
     * @param {V} v
     * @return {V}
     */
    Cls.prototype.topLevelComment = function (t, v) {
        return v
    };
    
    Cls.prototype.nestedComment =
                                 
        /**
    ~~~~~~~
         * @template {string} U
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
         * @param {T} t
    ~~~~~~~~~~~~~~~~~~~
                   ~
!!! error TS2304: Cannot find name 'T'.
                   ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @param {U} u
    ~~~~~~~~~~~~~~~~~~~
                   ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         * @return {T}
    ~~~~~~~~~~~~~~~~~~
                    ~
!!! error TS2304: Cannot find name 'T'.
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
    ~~~~~~~
        function (t, u) {
    ~~~~~~~~~~~~~~~~~~~~~
            return t
    ~~~~~~~~~~~~~~~~
        };
    ~~~~~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    
    var c = new Cls('a');
    const s = c.topLevelComment('a', 'b');
    const t = c.nestedComment('a', 'b');
    
    